--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -24,7 +24,7 @@
 
  BRD_neutrality:0 "Quanda"
 
- VNC_neutrality:0 "Venelouisiana"
+ VNC_neutrality:0 "Veneziana"
 
  AMS_neutrality:0 "The Hague"
 
@@ -117,7 +117,7 @@
 
  BOX_neutrality:0 "Boxstralia"
 
- GAY_elite:0 "fucking idiot"
+ GAY_elite:0 "Stuff"
  GAY_riskalite:0 "Riskalite Stuff"
 
  FIR_elite:0 "Fire Republic"
