--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -5,7 +5,7 @@
  TOY_founderism_DEF:0 ""
  TOY_neutrality:0 "Helmand Republic"
  TOY_neutrality_DEF:0 "The Helmand Republic"
- TOY_riskalite:0 ""
+ TOY_riskalite:0 "Edge Zukhov"
  TOY_riskalite_DEF:0 ""
  TOY_elite_ADJ:0 ""
  TOY_founderism_ADJ:0 ""
