--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -11,7 +11,7 @@
  TOY_founderism_ADJ:0 ""
  TOY_neutrality_ADJ:0 ""
  TOY_riskalite_ADJ:0 ""
- TOY_john:0 ""
+ TOY_john:0 "Dumbass"
  TOY_john_DEF:0 ""
  TOY_john_ADJ:0 "Johnite"
  TOY_sony:0 ""
