--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -283,21 +283,5 @@
  ECG_sony_DEF:0 ""
  ECG_sony_ADJ:0 "Sonyite"
 
- ROK_elite:0 ""
- ROK_elite_DEF:0 ""
- ROK_founderism:0 ""
- ROK_founderism_DEF:0 ""
- ROK_neutrality:0 "Rocklee Phillipines"
+ ROK_neutrality:0 "Rocklee States of Philipoor"
  ROK_neutrality_DEF:0 "The Rocklee Phillipines"
- ROK_riskalite:0 ""
- ROK_riskalite_DEF:0 ""
- ROK_elite_ADJ:0 ""
- ROK_founderism_ADJ:0 ""
- ROK_neutrality_ADJ:0 ""
- ROK_riskalite_ADJ:0 ""
- ROK_john:0 ""
- ROK_john_DEF:0 ""
- ROK_john_ADJ:0 "Johnite"
- ROK_sony:0 ""
- ROK_sony_DEF:0 ""
- ROK_sony_ADJ:0 "Sonyite"
