Fixed Readme and renamed Amnity to Armada

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -50,7 +50,7 @@
  
  TER_founderism:0 "Empire of Ternovia"
 
- CEL_founderism:0 "Cellonesia"
+ CEL_founderism:0 "Cettaly"
 
  RIO_founderism:0 "Rioghail Khedivate"
 
@@ -150,7 +150,7 @@
  RSK_riskalite_ADJ:0 "Riskalite"
  RSK_riskalite_DEF:0 "The Riskalites"
 
- AMN_founderism:0 "Amnity"
+ AMN_founderism:0 "Armada"
 
  INJ_founderism:0 "Senior Injuid"
  INJ_neutrality:0 "Independent Injuid"
