Renamed risk.mod to descriptor.mod

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -50,7 +50,7 @@
  
  TER_founderism:0 "Empire of Ternovia"
 
- CEL_founderism:0 "Cettaly"
+ CEL_founderism:0 "Supercell"
 
  RIO_founderism:0 "Rioghail Khedivate"
 
