fixed iranian provinces

--- a/localisation/MOD_Victory_Points_l_english.yml
+++ b/localisation/MOD_Victory_Points_l_english.yml
@@ -659,7 +659,7 @@ VICTORY_POINTS_11506:0 "Paris"
 VICTORY_POINTS_11516:0 "Nanzig"
 VICTORY_POINTS_11519:0 "Liège"
 VICTORY_POINTS_11537:0 "Uralsk"
-VICTORY_POINTS_11542:0 "Praha"
+VICTORY_POINTS_11542:0 "Progue"
 VICTORY_POINTS_11544:0 "Nürnberg"
 VICTORY_POINTS_11548:0 "Calais"
 VICTORY_POINTS_11561:0 "Kryvyi Rih"
