--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -1,2 +1,14 @@
 ﻿l_english:
- LOADING_TIP_0:0 "The drought in Syria before 2011 destroyed 75% of farms, forcing 1,5 million into the cities. Hungry and unemployed, they set the stage for the uprising against Assad."
+ LOADING_TIP_0:0 "Vedran is not a master baiter."
+ LOADING_TIP_1:0 "It is Spelled Baton Rogue. Not Baton Rouge"
+ LOADING_TIP_2:0 "It used to be an achievement for risk to get more than 40 Players in total, now it averages at more than 100 at one time."
+ LOADING_TIP_3:0 "Amnity used to be called Armada_Studios"
+ LOADING_TIP_4:0 "Petrovski used to be a prominent Senior Admin until he left the game because it was too immature. He was known for being overly immature."
+ LOADING_TIP_5:0 "Johnsonyism is the belief that the true Immortal God, blessings be upon him. Johnsony created and was destined to rule the Risk Realm."
+ LOADING_TIP_6:0 "Stuff is stupid"
+ LOADING_TIP_7:0 "The Riskalites were once a party of risk players who wanted to overthrow the Founderists back in 2016-2017"
+ LOADING_TIP_8:0 "Castlemore is known for being demoted,repromoted atleast 20 times throughout his existance."
+ LOADING_TIP_9:0 "Servers used to have a max of 40 Players, it has been lowered down to 35."
+ LOADING_TIP_10:0 "The Creator of this mod has Autism."
+ LOADING_TIP_11:0 "Stuff REALLY REALLY wanted progressive conservatism added, but kebb relented against the trite cunt"
+ LOADING_TIP_12:0 "Wypr, despite claiming to be Finnish, originates from the state of Mongolia."
