--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -120,7 +120,7 @@
  GAY_elite:0 "Stuff"
  GAY_riskalite:0 "Riskalite Stuff"
 
- FIR_elite:0 "Fire Republic"
+ FIR_neutrality:0 "Fire Republic"
 
  ASA_founderism:0 "Asatru"
 
