Filled america up more

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -18,10 +18,13 @@
  TOY_sony_DEF:0 ""
  TOY_sony_ADJ:0 "Sonyite"
 
+ TRN_neutrality:0 "Trinitits"
 
+ BLU_neutrality:0 "Bluelight"
 
+ VNZ_neutrality:0 "NC Venezuela"
 
-
+ NOB_neutrality:0 "Union of Noob Republics"
 
  EXP_neutrality:0 "Order of the Experienced"
 
