--- a/localisation/MOD_Victory_Points_l_english.yml
+++ b/localisation/MOD_Victory_Points_l_english.yml
@@ -209,12 +209,12 @@ VICTORY_POINTS_3707:0 "Chisinău"
 VICTORY_POINTS_3720:0 "Maikop"
 VICTORY_POINTS_3734:0 "Yekaterinodar"
 VICTORY_POINTS_3768:0 "Grenoble"
-VICTORY_POINTS_3775:0 "Toronto"
-VICTORY_POINTS_3778:0 "Ottawa"
+VICTORY_POINTS_3775:0 "Tsargrad"
+VICTORY_POINTS_3778:0 "Petrograd"
 VICTORY_POINTS_3780:0 "Milano"
 VICTORY_POINTS_3816:0 "Zaragoza"
 VICTORY_POINTS_3838:0 "Ajáccio"
-VICTORY_POINTS_3878:0 "New York City"
+VICTORY_POINTS_3878:0 "New Ownage City"
 VICTORY_POINTS_3882:0 "Skopje"
 VICTORY_POINTS_3893:0 "Edirne"
 VICTORY_POINTS_3920:0 "León"
