--- a/localisation/MOD_Victory_Points_l_english.yml
+++ b/localisation/MOD_Victory_Points_l_english.yml
@@ -120,7 +120,7 @@ VICTORY_POINTS_1814:0 "Wellington"
 VICTORY_POINTS_1821:0 "Yekaterinburg"
 VICTORY_POINTS_1827:0 "Denver"
 VICTORY_POINTS_1836:0 "Bismarck"
-VICTORY_POINTS_1843:0 "Miami"
+VICTORY_POINTS_1843:0 "Fireshima"
 VICTORY_POINTS_1866:0 "Minneapolis"
 VICTORY_POINTS_1891:0 "Sokoto"
 VICTORY_POINTS_1896:0 "Tabriz"
@@ -257,7 +257,7 @@ VICTORY_POINTS_4318:0 "Putao"
 VICTORY_POINTS_4329:0 "Port Moresby"
 VICTORY_POINTS_4333:0 "Akmolinsk"
 VICTORY_POINTS_4344:0 "Mysore"
-VICTORY_POINTS_4345:0 "Montréal"
+VICTORY_POINTS_4345:0 "Kaliningrad"
 VICTORY_POINTS_4348:0 "Kanchanaburi"
 VICTORY_POINTS_4357:0 "North Palau"
 VICTORY_POINTS_4363:0 "Pleiku"
@@ -681,7 +681,7 @@ VICTORY_POINTS_11752:0 "Zhangbei"
 VICTORY_POINTS_11771:0 "Shenyang"
 VICTORY_POINTS_11773:0 "Cagliari"
 VICTORY_POINTS_11800:0 "Pittsburgh"
-VICTORY_POINTS_11805:0 "Lisbon"
+VICTORY_POINTS_11805:0 "Leejj City"
 VICTORY_POINTS_11818:0 "Thessaloniki"
 VICTORY_POINTS_11825:0 "Valladolid"
 VICTORY_POINTS_11833:0 "Livorno"
