--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -18,6 +18,8 @@
  TOY_sony_DEF:0 ""
  TOY_sony_ADJ:0 "Sonyite"
 
+ RED_neutrality:0 "Red Pokagobox"
+
  TRN_neutrality:0 "Trinitits"
 
  BLU_neutrality:0 "Bluelight"
