--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -18,6 +18,10 @@
  TOY_sony_DEF:0 ""
  TOY_sony_ADJ:0 "Sonyite"
 
+ DVN_neutrality:0 "Divine"
+
+ GST_imperialism:0 "Imperio de los Invitados"
+
  RED_neutrality:0 "Red Pokagobox"
 
  TRN_neutrality:0 "Trinitits"
